--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -13,13 +13,14 @@
     "access": "public"
   },
   "peerDependencies": {
-    "eslint": ">=7.4.0",
-    "typescript": ">=3.9"
+    "eslint": ">=8.13.0",
+    "typescript": ">=4.6"
   },
   "dependencies": {
-    "@antfu/eslint-config-basic": "^0.19.4",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0"
+    "@antfu/eslint-config-basic": "^0.20.2",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "jsonc-eslint-parser": "^2.1.0"
   },
   "devDependencies": {
     "eslint": "^8.12.0"
