--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -20,6 +20,8 @@
     "eslint-plugin-vue": "^9.1.0"
   },
   "devDependencies": {
-    "eslint": "^8.17.0"
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.17.0",
+    "vue-eslint-parser": "^9.0.2"
   }
 }
